--- a/src/app/update-contact/update-contact.page.html
+++ b/src/app/update-contact/update-contact.page.html
@@ -46,15 +46,14 @@
     </span>
 
     <ion-item>
-      <ion-label position="floating">Notes</ion-label>
-      <ion-input formControlName="notes" type="text" required>
-      </ion-input>
+      <ion-label position="floating">Notes</ion-label>     
+      <ion-textarea rows="5" formControlName="notes" type="text" required></ion-textarea>
     </ion-item>
 
-    <span class="error ion-padding" *ngIf="isSubmitted && errorControl.name.errors?.required">
+    <span class="error ion-padding" *ngIf="isSubmitted && errorControl.notes.errors?.required">
       Notes is required.
     </span>
-    <span class="error ion-padding" *ngIf="isSubmitted && errorControl.name.errors?.minlength">
+    <span class="error ion-padding" *ngIf="isSubmitted && errorControl.notes.errors?.minlength">
       Notes should be min 20 chars long.
     </span>
     <ion-button class="ion-margin-top" type="submit" expand="block" color="success">Update</ion-button>
